--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
     <!-- SLIDES -->
       <slide class="" id="slide-1" style="background:;">
   <hgroup>
-    
+    <h2>Slide 1</h2>
   </hgroup>
   <article>
-    
+    <p>Como fazer</p>
+
   </article>
   <!-- Presenter Notes -->
 </slide>
@@ -55,6 +56,27 @@
   </hgroup>
   <article>
     <p>Teste de texto</p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+      <slide class="" id="slide-3" style="background:;">
+  <hgroup>
+    <h2>Slide 3</h2>
+  </hgroup>
+  <article>
+    <p>Lista</p>
+
+<ul>
+<li>Item 1</li>
+<li>Item 2
+
+<ul>
+<li>Sub-item 1</li>
+<li>Sub-item 2<br></li>
+</ul></li>
+</ul>
 
   </article>
   <!-- Presenter Notes -->
