--- a/index.html
+++ b/index.html
@@ -74,9 +74,27 @@
 
 <ul>
 <li>Sub-item 1</li>
-<li>Sub-item 2<br></li>
+<li>Sub-item 2</li>
 </ul></li>
 </ul>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+      <slide class="" id="slide-4" style="background:;">
+  <hgroup>
+    <h2>Slide 4</h2>
+  </hgroup>
+  <article>
+    <p>Um bloco com código do <strong>R</strong></p>
+
+<pre><code class="r">rnorm(10)
+</code></pre>
+
+<pre><code>##  [1] -0.16708  0.72723 -1.45602 -1.91107 -0.04023  0.66441  1.14525
+##  [8] -0.12072  0.94077  0.92474
+</code></pre>
 
   </article>
   <!-- Presenter Notes -->
