--- a/index.html
+++ b/index.html
@@ -50,13 +50,18 @@
   <!-- Presenter Notes -->
 </slide>
 
-      <slide class="class" id="id" style="background:;">
+      <slide class="" id="slide-2" style="background:;">
   <hgroup>
     <h2>Slide 2</h2>
   </hgroup>
   <article>
-    <p>Teste de texto</p>
-
+    
+<div style='float:left;width:48%;' class='centered'>
+  
+</div>
+<div style='float:right;width:48%;'>
+  
+</div>
   </article>
   <!-- Presenter Notes -->
 </slide>
@@ -92,8 +97,8 @@
 <pre><code class="r">rnorm(10)
 </code></pre>
 
-<pre><code>##  [1]  0.856805  0.007111 -0.012784  0.702473 -1.658707 -1.640158 -1.457729
-##  [8]  0.685515 -0.384688  0.290762
+<pre><code>##  [1]  1.0033 -0.9067 -1.2407  0.7516  0.5029  0.6043 -0.4901  2.5319
+##  [9] -2.5362 -1.0644
 </code></pre>
 
   </article>
