--- a/index.html
+++ b/index.html
@@ -57,10 +57,13 @@
   <article>
     
 <div style='float:left;width:48%;' class='centered'>
-  
+  <p>Teste de texto</p>
+
+
 </div>
 <div style='float:right;width:48%;'>
-  
+  <p>Teste com texto</p>
+
 </div>
   </article>
   <!-- Presenter Notes -->
@@ -97,8 +100,8 @@
 <pre><code class="r">rnorm(10)
 </code></pre>
 
-<pre><code>##  [1]  1.0033 -0.9067 -1.2407  0.7516  0.5029  0.6043 -0.4901  2.5319
-##  [9] -2.5362 -1.0644
+<pre><code>##  [1]  1.04651 -0.01969 -0.17869 -0.08057  0.60372 -0.30575 -0.68887
+##  [8]  1.60664  1.04627 -0.92890
 </code></pre>
 
   </article>
