--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
 <div style='float:left;width:48%;' class='centered'>
   <p>Teste de texto</p>
 
+<ul>
+<li>Item 1</li>
+</ul>
+
 </div>
 <div style='float:right;width:48%;'>
   <p>Teste com texto</p>
