--- a/index.html
+++ b/index.html
@@ -42,11 +42,14 @@
 
     <!-- SLIDES -->
     <slide class="" id="slide-1" style="background:;">
-  <hgroup>
-    <h2>Slide 1</h2>
-  </hgroup>
   <article data-timings="">
-    <p>Como fazer</p>
+    <script type = 'text/javascript'>
+$('p:has(img.build)').addClass('build')
+</script>
+
+<h2>Slide 1</h2>
+
+<p>Como fazer</p>
 
   </article>
   <!-- Presenter Notes -->
@@ -68,6 +71,8 @@
 </div>
 <div style='float:right;width:48%;'>
   <p>Teste com texto</p>
+
+<p class='build'><span>Aqui aparece mais um texto!</span></p>
 
 </div>
   </article>
@@ -130,7 +135,7 @@
     <ul>
       <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=1 title='Slide 1'>
+        data-slide=1 title=''>
          1
       </a>
     </li>
